Closed
Bug 14021
Opened 26 years ago
Closed 26 years ago
Assertions when displaying a message
Categories
(Core :: Networking, defect, P3)
Tracking
()
VERIFIED
FIXED
M11
People
(Reporter: scottputterman, Assigned: mscott)
Details
Attachments
(1 file)
|
1.34 KB,
patch
|
Details | Diff | Splinter Review |
Open mail. Select a folder. Select a mesage. You will get multiple
assertions:
nsDebug::Assertion(const char * 0x014afa48
??_C@_0BG@LEKL@QueryInterface?5needed?$AA@, const char * 0x014afa60
??_C@_0BI@MMJM@query_result?5?$DN?$DN?5mRawPtr?$AA@, const char * 0x014af9e0
??_C@_0CB@MCGB@?4?4?2?4?4?2?4?4?2dist?2include?2nsCOMPtr?4h@, int 487) line 181
+ 13 bytes
nsCOMPtr<nsISupports>::Assert_NoQueryNeeded() line 487 + 36 bytes
nsCOMPtr<nsISupports>::operator=(nsISupports * 0x028e23d4) line 534
nsFileTransport::AsyncRead(nsFileTransport * const 0x028decf0, unsigned int
12110, int 11478, nsISupports * 0x028e23d4, nsIStreamListener * 0x028e0b34) line
346
nsFileChannel::AsyncRead(nsFileChannel * const 0x028e0b30, unsigned int 12110,
int 11478, nsISupports * 0x028e23d4, nsIStreamListener * 0x028e1550) line 334 +
47 bytes
nsMsgProtocol::LoadUrl(nsIURI * 0x028e23d4, nsISupports * 0x00000000) line 220
nsMailboxProtocol::LoadUrl(nsIURI * 0x028e23d4, nsISupports * 0x00000000) line
274 + 17 bytes
nsMsgProtocol::AsyncRead(nsMsgProtocol * const 0x028e1554, unsigned int 0, int
-1, nsISupports * 0x00000000, nsIStreamListener * 0x028e1170) line 295
nsDocumentBindInfo::Bind(nsIURI * 0x028e23d4, nsIStreamListener * 0x00000000,
nsIInputStream * 0x00000000) line 1619 + 33 bytes
nsDocLoaderImpl::LoadDocument(nsDocLoaderImpl * const 0x028cd090, nsIURI *
0x028e23d4, const char * 0x02c6b1a4, nsIContentViewerContainer * 0x028cc5c0,
nsIInputStream * 0x00000000, nsISupports * 0x00000000, nsIStreamObserver *
0x028cc7b0, unsigned int 0, const unsigned int 0) line 591 + 18 bytes
nsWebShell::DoLoadURL(nsIURI * 0x028e23d4, const char * 0x02c6b1a4,
nsIInputStream * 0x00000000, unsigned int 0, const unsigned int 0) line 2090 +
63 bytes
nsWebShell::LoadURI(nsWebShell * const 0x028cc5c0, nsIURI * 0x028e23d4, const
char * 0x02c6b1a4, nsIInputStream * 0x00000000, int 1, unsigned int 0, const
unsigned int 0, nsISupports * 0x00000000) line 2203 + 28 bytes
nsMailboxService::FetchMessage(const char * 0x028e6aa0, nsISupports *
0x028cc5c0, nsIUrlListener * 0x00000000, int 1, nsIURI * * 0x00000000) line 156
+ 50 bytes
nsMailboxService::DisplayMessage(nsMailboxService * const 0x028e24f4, const char
* 0x028e6aa0, nsISupports * 0x028cc5c0, nsIUrlListener * 0x00000000, nsIURI * *
0x00000000) line 174
nsMessenger::OpenURL(nsMessenger * const 0x02266e20, const char * 0x028e6b50)
line 428
| Reporter | ||
Updated•26 years ago
|
Assignee: gagan → mscott
| Reporter | ||
Comment 1•26 years ago
|
||
reassigning to mscott. I think the fix is in mail code. I'm about to attach a
patch of what fixes it for me, but I'm not sure if m_socketIsOpen needs to be
set to something else if urlSupports is null.
| Reporter | ||
Comment 2•26 years ago
|
||
| Assignee | ||
Comment 3•26 years ago
|
||
Strange I don't see any assertions on Linux and Windows on clobber builds in my
tree from yesterday....
| Reporter | ||
Comment 4•26 years ago
|
||
I get this on both Linux and Windows. I haven't tried the Mac yet. I've only
tried POP.
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M11
| Assignee | ||
Comment 5•26 years ago
|
||
Okay, I just saw it too....I'll turn the nsIURI getting passed in as the channel
context into a nsISupports and that should fix it.
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
QA Contact: tever → ppandit
Resolution: --- → FIXED
| Assignee | ||
Comment 6•26 years ago
|
||
Changing QA field to Par instead of necko's QA person.
I have a fix I'll be checking in today. (Actually i just realized scott p. had a
fix attached to this bug report as well).
To verify using a debug build: make sure displaying a pop message doesn't cause
an assert for you inside of some nsCOMPtr code.
Using a debug build (on NT) that was pulled around 2:00 p.m.
I migrated a profile from 4.7 that used a pop account.
Set a breakpoint in the same code area as Putterman has in his patch
Sent and received a message
When I tried to display the message, I got the following assertion and trace:
NTDLL! DbgBreakPoint@0 address 0x77f76148
nsDebug::Break(const char * 0x0109f9c4
??_C@_0CB@MCGB@?4?4?2?4?4?2?4?4?2dist?2include?2nsCOMPtr?4h@, int 487) line 155
nsDebug::Assertion(const char * 0x0109fa28
??_C@_0BG@LEKL@QueryInterface?5needed?$AA@, const char * 0x0109fa40
??_C@_0BI@MMJM@query_result?5?$DN?$DN?5mRawPtr?$AA@, const char * 0x0109f9c4
??_C@_0CB@MCGB@?4?4?2?4?4?2?4?4?2dist?2include?2nsCOMPtr?4h@, int 487) line 181
+ 13 bytes
nsCOMPtr<nsISupports>::Assert_NoQueryNeeded() line 487 + 36 bytes
nsCOMPtr<nsISupports>::operator=(nsISupports * 0x03624d04) line 534
nsFileTransport::AsyncRead(nsFileTransport * const 0x03b7da70, unsigned int
2221, int 1531, nsISupports * 0x03624d04, nsIStreamListener * 0x03b7f494) line
346
nsFileChannel::AsyncRead(nsFileChannel * const 0x03b7f490, unsigned int 2221,
int 1531, nsISupports * 0x03624d04, nsIStreamListener * 0x03a73110) line 334 +
47 bytes
nsMsgProtocol::LoadUrl(nsIURI * 0x03624d04, nsISupports * 0x00000000) line 220
nsMailboxProtocol::LoadUrl(nsIURI * 0x03624d04, nsISupports * 0x00000000) line
274 + 17 bytes
nsMsgProtocol::AsyncRead(nsMsgProtocol * const 0x03a73114, unsigned int 0, int
-1, nsISupports * 0x00000000, nsIStreamListener * 0x03a74f50) line 295
nsDocumentBindInfo::Bind(nsIURI * 0x03624d04, nsILoadGroup * 0x035fd060,
nsIInputStream * 0x00000000, const unsigned short * 0x00000000) line 1154 + 42
bytes
nsDocLoaderImpl::LoadDocument(nsDocLoaderImpl * const 0x035fd0c0, nsIURI *
0x03624d04, const char * 0x034ab0d4, nsIContentViewerContainer * 0x035fc350,
nsIInputStream * 0x00000000, nsISupports * 0x00000000, nsIStreamObserver *
0x035fc560, unsigned int 0, const unsigned int 0, const unsigned short *
0x00000000) line 529 + 32 bytes
nsWebShell::DoLoadURL(nsIURI * 0x03624d04, const char * 0x034ab0d4,
nsIInputStream * 0x00000000, unsigned int 0, const unsigned int 0, const
unsigned short * 0x00000000) line 2111 + 67 bytes
nsWebShell::LoadURI(nsWebShell * const 0x035fc350, nsIURI * 0x03624d04, const
char * 0x034ab0d4, nsIInputStream * 0x00000000, int 1, unsigned int 0, const
unsigned int 0, nsISupports * 0x00000000, const unsigned short * 0x00000000)
line 2225 + 32 bytes
nsMailboxService::FetchMessage(const char * 0x0361b2f0, nsISupports *
0x035fc350, nsIUrlListener * 0x00000000, int 1, nsIURI * * 0x00000000) line 156
+ 52 bytes
nsMailboxService::DisplayMessage(nsMailboxService * const 0x03ace6f4, const char
* 0x0361b2f0, nsISupports * 0x035fc350, nsIUrlListener * 0x00000000, nsIURI * *
0x00000000) line 174
nsMessenger::OpenURL(nsMessenger * const 0x03371c00, const char * 0x0361b3a0)
line 428
XPTC_InvokeByIndex(nsISupports * 0x03371c00, unsigned int 7, unsigned int 1,
nsXPTCVariant * 0x0012d264) line 135
nsXPCWrappedNativeClass::CallWrappedMethod(JSContext * 0x02a6e830,
nsXPCWrappedNative * 0x03373cc0, const XPCNativeMemberDescriptor * 0x03372094,
nsXPCWrappedNativeClass::CallMode CALL_METHOD, unsigned int 1, long *
0x03079e30, long * 0x0012d484) line 661 + 44 bytes
WrappedNative_CallMethod(JSContext * 0x02a6e830, JSObject * 0x00c10fa0, unsigned
int 1, long * 0x03079e30, long * 0x0012d484) line 170 + 34 bytes
js_Invoke(JSContext * 0x02a6e830, unsigned int 1, unsigned int 0) line 654 + 26
bytes
js_Interpret(JSContext * 0x02a6e830, long * 0x0012dcb4) line 2228 + 15 bytes
js_Invoke(JSContext * 0x02a6e830, unsigned int 1, unsigned int 0) line 670 + 13
bytes
js_Interpret(JSContext * 0x02a6e830, long * 0x0012e4a0) line 2228 + 15 bytes
js_Invoke(JSContext * 0x02a6e830, unsigned int 1, unsigned int 0) line 670 + 13
bytes
js_Interpret(JSContext * 0x02a6e830, long * 0x0012ec8c) line 2228 + 15 bytes
js_Invoke(JSContext * 0x02a6e830, unsigned int 1, unsigned int 0) line 670 + 13
bytes
js_Interpret(JSContext * 0x02a6e830, long * 0x0012f478) line 2228 + 15 bytes
js_Invoke(JSContext * 0x02a6e830, unsigned int 1, unsigned int 2) line 670 + 13
bytes
js_InternalCall(JSContext * 0x02a6e830, JSObject * 0x00c121b0, long 12657088,
unsigned int 1, long * 0x0012f594, long * 0x0012f5fc) line 747 + 15 bytes
JS_CallFunctionValue(JSContext * 0x02a6e830, JSObject * 0x00c121b0, long
12657088, unsigned int 1, long * 0x0012f594, long * 0x0012f5fc) line 2662 + 29
bytes
nsJSEventListener::HandleEvent(nsIDOMEvent * 0x0361b720) line 110 + 43 bytes
nsEventListenerManager::HandleEvent(nsIPresContext & {...}, nsEvent *
0x0012f838, nsIDOMEvent * * 0x0012f7e0, unsigned int 7, nsEventStatus &
nsEventStatus_eIgnore) line 937 + 21 bytes
RDFElementImpl::HandleDOMEvent(RDFElementImpl * const 0x0359c560, nsIPresContext
& {...}, nsEvent * 0x0012f838, nsIDOMEvent * * 0x0012f7e0, unsigned int 1,
nsEventStatus & nsEventStatus_eIgnore) line 2872
nsXULTreeElement::FireOnSelectHandler(nsXULTreeElement * const 0x0359e0dc) line
365
nsXULTreeElement::SelectCell(nsXULTreeElement * const 0x0359e0d8,
nsIDOMXULElement * 0x04186290) line 163
nsTreeFrame::SetSelection(nsIPresContext & {...}, nsTreeCellFrame * 0x041617b0)
line 92
nsTreeCellFrame::HandleMouseDownEvent(nsIPresContext & {...}, nsGUIEvent *
0x0012fbe8, nsEventStatus & nsEventStatus_eConsumeDoDefault) line 236
nsTreeCellFrame::HandleEvent(nsTreeCellFrame * const 0x041617b0, nsIPresContext
& {...}, nsGUIEvent * 0x0012fbe8, nsEventStatus &
nsEventStatus_eConsumeDoDefault) line 189
PresShell::HandleEvent(PresShell * const 0x02abc8c4, nsIView * 0x02abcd20,
nsGUIEvent * 0x0012fbe8, nsEventStatus & nsEventStatus_eConsumeDoDefault) line
2034 + 38 bytes
nsView::HandleEvent(nsView * const 0x02abcd20, nsGUIEvent * 0x0012fbe8, unsigned
int 28, nsEventStatus & nsEventStatus_eConsumeDoDefault, int & 0) line 828
nsViewManager::DispatchEvent(nsViewManager * const 0x02abb250, nsGUIEvent *
0x0012fbe8, nsEventStatus & nsEventStatus_eConsumeDoDefault) line 1644
HandleEvent(nsGUIEvent * 0x0012fbe8) line 63
nsWindow::DispatchEvent(nsWindow * const 0x02abcbe4, nsGUIEvent * 0x0012fbe8,
nsEventStatus & nsEventStatus_eIgnore) line 332 + 10 bytes
nsWindow::DispatchWindowEvent(nsGUIEvent * 0x0012fbe8) line 353
nsWindow::DispatchMouseEvent(unsigned int 302, nsPoint * 0x00000000) line 3160 +
21 bytes
ChildWindow::DispatchMouseEvent(unsigned int 302, nsPoint * 0x00000000) line
3378
nsWindow::ProcessMessage(unsigned int 513, unsigned int 1, long 9634076, long *
0x0012fe08) line 2389 + 24 bytes
nsWindow::WindowProc(HWND__ * 0x00590426, unsigned int 513, unsigned int 1, long
9634076) line 401 + 27 bytes
USER32! DispatchMessageWorker@8 + 135 bytes
USER32! DispatchMessageA@4 + 11 bytes
nsAppShell::Run() line 74
nsAppShellService::Run(nsAppShellService * const 0x00ab62a0) line 456
main1(int 1, char * * 0x00a41600) line 591 + 12 bytes
main(int 1, char * * 0x00a41600) line 637 + 13 bytes
mainCRTStartup() line 338 + 17 bytes
KERNEL32! BaseProcessStart@4 + 64 bytes
| Assignee | ||
Updated•26 years ago
|
Status: REOPENED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 9•26 years ago
|
||
I'm pretty sure you just didn't get my fix when you pulled. I marked the bug
fixed before I checked in the change. The tree didn't open until after 2pm
Friday so I'm pretty sure you couldn't have gotten the change since I couldn't
check it in until after 2.
Re-marking as fixed. Can you repull and try again? Thanks!
Comment 10•26 years ago
|
||
Verified using debug commerical build on 10/14/99
Comment 11•25 years ago
|
||
Bulk move of all Necko (to be deleted component) bugs to new Networking
component.
You need to log in
before you can comment on or make changes to this bug.
Description
•