Bug #14021 --> convert nsIURI into a nsISupports before passing in to avoid an nsCOMPtr assert later on.