mailnews/base/util/nsMsgProtocol.cpp
@@ -215,8 +215,10 @@ nsresult nsMsgProtocol::LoadUrl(nsIURI * aURL, nsISupports * aConsumer)
 
 		if (!m_socketIsOpen)
 		{
+			nsCOMPtr<nsISupports> urlSupports = do_QueryInterface(aURL);
+
 			// put us in a state where we are always notified of incoming data
-			m_channel->AsyncRead(m_startPosition, m_readCount, aURL,this /* stream observer */);
+			m_channel->AsyncRead(m_startPosition, m_readCount, urlSupports ,this /* stream observer */);
 			m_socketIsOpen = PR_TRUE; // mark the channel as open
 		} // if we got an event queue service
 		else  // the connection is already open so we should begin processing our new url...
